syntax = "proto3";

package api.v1;

import "user.proto";

option go_package = "skeleton/gen;apiv1";

// User service for authentication and user management
service UserService {
  // Create a new user
  // HTTP: POST /api/v1/user/create
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // Login user  
  // HTTP: POST /api/v1/user/login
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);

  // Get user by ID
  // HTTP: GET /api/v1/user/{user_id}
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // Hello world endpoint>
  // HTTP: GET /api/v1/hello
  rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse);
}

// Messages for HelloWorld
message HelloWorldRequest {
}

message HelloWorldResponse {
  string message = 1;
}
