syntax = "proto3";

package api.v1;

option go_package = "skeleton/gen;apiv1";

// User entity
message User {
  int32 id = 1;
  string username = 2;
}

// Messages for CreateUser
message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

// Messages for LoginUser
message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

// Messages for GetUser
message GetUserRequest {
  int32 user_id = 1;
}

message GetUserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}
